--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
-  "name": "typescript-starter",
-  "version": "1.0.0",
+  "name": "@jyotirmay/tailwind-to-css",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jyotirmaybarman/tailwind-to-css.git"
+  },
+  "keywords": ["tailwind to css converter", "tailwind to vanilla css"],
+  "author": "Jyotirmay Barman",
+  "bugs": {
+    "url": "https://github.com/jyotirmaybarman/tailwind-to-css/issues"
+  },
+  "homepage": "https://github.com/jyotirmaybarman/tailwind-to-css#readme",
+  "license": "MIT",
   "devDependencies": {
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@jyotirmay/tailwind-class-validator": "^0.0.2",
+    "@tailwindcss/typography": "^0.5.10",
+    "cheerio": "^1.0.0-rc.12",
+    "nanoid": "^3.3.7",
+    "tailwindcss": "^3.4.1"
   }
 }
