--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jyotirmay/tailwind-to-css",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc"
